--- a/_posts/2015-01-26-我的第一篇github博客.md
+++ b/_posts/2015-01-26-我的第一篇github博客.md
@@ -4,19 +4,26 @@ title: 我的第一篇github博客
 ---
 
 ## GitHub Blog 入门
-参考1、2
+- 了解github pages，区分个人（机构）主页和项目主页
+- 了解jekyll、Markdown
+- 参考：[1]，[2]
 
 ## 模板
-参考3
+- 在网上找一个gh-pages模板
+- 了解模板的架构，尝试修改为自己需要的样式
+- 参考：[3]
 
 ## 分页功能
-参考4
+- 修改模板，增加分页功能
+- 参考：[4]
 
 ## 文章分类(标签)
-参考5
+- 修改模板，为文章添加Category
+- 参考：[5]
 
 ## 生成目录
-参考6
+- 修改模板，为文章添加目录
+- 参考：[6]
 
 ## 致谢
 - 感谢曦铭，为我详细介绍github、Markdown相关知识。
