--- a/_posts/2015-02-03-Lucene分词器.md
+++ b/_posts/2015-02-03-Lucene分词器.md
@@ -5,14 +5,17 @@ categories: [搜索引擎, Lucene, 分词器]
 ---
 
 ## 开篇
+
 分词，简而言之，就是把一段长的`文本`按照某种（某些）`约定`切分成更短的文本。
 
 分词器，就是“切分”操作的`执行者`。
 
-本文将从“文本”、“约定”以及“执行者”角度，简要分析Lucene分词器的`工作方式`。本文不讨论分词的算法（感兴趣的同学可以用[谷歌学术搜索](http://scholar.google.com/)或[微软学术搜索](http://academic.research.microsoft.com/)去查找相关资料），也不讨论分词器的具体使用方法（有这方面需求的同学，可以查看[Lucene官方文档](http://lucene.apache.org/core/3_5_0/api/all/index.html)）。本文基于Lucene3.5版本的代码进行讨论。
+本文将从“文本”、“约定”以及“执行者”角度，简要分析Lucene分词器的`工作方式`。本文不讨论分词的算法（感兴趣的同学可以用[谷歌学术搜索](http://scholar.google.com/)或[微软学术搜索](http://academic.research.microsoft.com/)去查找相关资料），也不讨论分词器的具体使用方法（有这方面需求的同学，可以查看[Lucene官方文档](http://lucene.apache.org/core/3_5_0/api/all/index.html)）。本文基于Lucene3.5版本的代码进行分析。
 
 ## Lucene分词器工作方式
+
 Lucene分词器的工作方式可以用下图表示：
+
 ![](http://cc213.github.io/images/Lucene%E5%88%86%E8%AF%8D%E5%99%A8/workflow.png "图1 - Lucene分词器工作方式")
 
 - `文本`
@@ -21,15 +24,23 @@ Lucene分词器的工作方式可以用下图表示：
 
 - `约定` + `执行者`
 
-	有了待切分的`文本`以后，接下来要关心的问题就是按照什么样的`约定`来进行切分操作（`约定`的另一个高大上名字就是算法），对应图中的蓝色部分，在Lucene中与此相关的类是[TokenStream](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html)；与此同时，[TokenStream](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html)也是切分操作的`执行者`。在它的API中，有一个非常重要的方法：[incrementToken()](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html#incrementToken())。
+	有了待切分的`文本`以后，接下来要关心的问题就是按照什么样的`约定`（对应图中的蓝色部分，`约定`的另一个高大上名字就是算法）来进行切分操作，在Lucene中与此相关的类是[TokenStream](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html)；与此同时，TokenStream也是切分操作的`执行者`。在它的API中，有一个非常重要的方法[incrementToken()](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html#incrementToken())：
 
 	<!-- lang:java -->
 		public abstract boolean incrementToken() throws IOException;
 
-	Lucene官方文档是这样描述incrementToken()方法的：“A TokenStream enumerates the sequence of tokens, either from Fields of a Document or from query text”。因此，所有分词的`约定`都是放在这个方法中实现的。Lucene在索引和查询的时候，通过这个方法遍历token；当没有可以再访问的token时，方法返回false。
+	Lucene官方文档是这样描述incrementToken()方法的：“Consumers (i.e., IndexWriter) use this method to advance the stream to the next token”。因此，所有分词的`约定`都是在这个方法中实现的。Lucene在索引和查询的时候，通过这个方法遍历token；当没有可以再访问的token时，方法返回false。
 
-	在分词的过程中，`执行者`需要记录下来一些属性，对应图中的紫色部分，在Lucene中通过[Attribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/util/Attribute.html)实现。这些属性可以用来获取token的文本（[CharTermAttribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/tokenattributes/CharTermAttribute.html)），或者作为分词`约定`的参数来影响下一个token的切分操作([OffsetAttribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/tokenattributes/OffsetAttribute.html))。Lucene将这些属性集中放在[AttributeSource](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/util/AttributeSource.html)中。
+	在分词的过程中，TokenStream需要记录下来一些属性（对应图中的紫色部分，在Lucene中通过[Attribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/util/Attribute.html)实现）。这些属性可以用来获取token的文本（[CharTermAttribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/tokenattributes/CharTermAttribute.html)），或者作为分词`约定`的参数来影响下一个token的切分操作([OffsetAttribute](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/tokenattributes/OffsetAttribute.html))。Lucene将这些属性集中放在[AttributeSource](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/util/AttributeSource.html)中，TokenStream通过继承AttributeSource来读取和更新这些属性。
 
-- `执行者的创建者`
+	TokenStream可以由[Analyzer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/Analyzer.html)来创建：
+	<!-- lang:java -->
+		/**
+		 * Creates a TokenStream which tokenizes all the text in the provided Reader.
+		 */
+		public abstract TokenStream tokenStream(String fieldName, Reader reader);
 
 ## CharTokenizer分析
+
+接下来，我们分析一下CharTokenizer的源码。
+
