--- a/_posts/2015-02-03-Lucene分词器.md
+++ b/_posts/2015-02-03-Lucene分词器.md
@@ -42,5 +42,54 @@ Lucene分词器的工作方式可以用下图表示：
 
 ## CharTokenizer分析
 
-接下来，我们分析一下CharTokenizer的源码。
+接下来，我们分析一下[CharTokenizer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/CharTokenizer.html)的源码。
+
+<!-- lang:java -->
+	  @Override
+	  public final boolean incrementToken() throws IOException {
+		clearAttributes();
+		if(useOldAPI) // TODO remove this in LUCENE 4.0
+		  return incrementTokenOld();
+		int length = 0;
+		int start = -1; // this variable is always initialized
+		char[] buffer = termAtt.buffer();
+		while (true) {
+		  if (bufferIndex >= dataLen) {
+			offset += dataLen;
+			if(!charUtils.fill(ioBuffer, input)) { // read supplementary char aware with CharacterUtils
+			  dataLen = 0; // so next offset += dataLen won't decrement offset
+			  if (length > 0) {
+				break;
+			  } else {
+				finalOffset = correctOffset(offset);
+				return false;
+			  }
+			}
+			dataLen = ioBuffer.getLength();
+			bufferIndex = 0;
+		  }
+		  // use CharacterUtils here to support < 3.1 UTF-16 code unit behavior if the char based methods are gone
+		  final int c = charUtils.codePointAt(ioBuffer.getBuffer(), bufferIndex);
+		  bufferIndex += Character.charCount(c);
+
+		  if (isTokenChar(c)) {               // if it's a token char
+			if (length == 0) {                // start of token
+			  assert start == -1;
+			  start = offset + bufferIndex - 1;
+			} else if (length >= buffer.length-1) { // check if a supplementary could run out of bounds
+			  buffer = termAtt.resizeBuffer(2+length); // make sure a supplementary fits in the buffer
+			}
+			length += Character.toChars(normalize(c), buffer, length); // buffer it, normalized
+			if (length >= MAX_WORD_LEN) // buffer overflow! make sure to check for >= surrogate pair could break == test
+			  break;
+		  } else if (length > 0)             // at non-Letter w/ chars
+			break;                           // return 'em
+		}
+
+		termAtt.setLength(length);
+		assert start != -1;
+		offsetAtt.setOffset(correctOffset(start), finalOffset = correctOffset(start+length));
+		return true;
+		
+	  }
 
