--- a/_posts/2015-02-03-Lucene分词器.md
+++ b/_posts/2015-02-03-Lucene分词器.md
@@ -26,8 +26,9 @@ Lucene分词器的工作方式可以用下图表示：
 
 	有了待切分的`文本`以后，接下来要关心的问题就是按照什么样的`约定`（对应图中的蓝色部分，`约定`的另一个高大上名字就是算法）来进行切分操作，在Lucene中与此相关的类是[TokenStream](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html)；与此同时，TokenStream也是切分操作的`执行者`。在它的API中，有一个非常重要的方法[incrementToken()](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/TokenStream.html#incrementToken())：
 
-	<!-- lang:java -->
-		public abstract boolean incrementToken() throws IOException;
+	```Java
+	public abstract boolean incrementToken() throws IOException;
+	```
 
 	Lucene官方文档是这样描述incrementToken()方法的：“Consumers (i.e., IndexWriter) use this method to advance the stream to the next token”。因此，所有分词的`约定`都是在这个方法中实现的。Lucene在索引和查询的时候，通过这个方法遍历token；当没有可以再访问的token时，方法返回false。
 
@@ -35,59 +36,61 @@ Lucene分词器的工作方式可以用下图表示：
 
 	TokenStream可以由[Analyzer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/Analyzer.html)来创建：
 
-	<!-- lang:java -->
-		public abstract TokenStream tokenStream(String fieldName, Reader reader);
+	```Java
+	public abstract TokenStream tokenStream(String fieldName, Reader reader);
+	```
 
 ## CharTokenizer分析
 
 接下来，我们分析一下[CharTokenizer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/CharTokenizer.html)的源码。
 
-<!-- lang:java -->
-	  @Override
-	  public final boolean incrementToken() throws IOException {
-		clearAttributes();
-		if(useOldAPI) // TODO remove this in LUCENE 4.0
-		  return incrementTokenOld();
-		int length = 0;
-		int start = -1; // this variable is always initialized
-		char[] buffer = termAtt.buffer();
-		while (true) {
-		  if (bufferIndex >= dataLen) {
-			offset += dataLen;
-			if(!charUtils.fill(ioBuffer, input)) { // read supplementary char aware with CharacterUtils
-			  dataLen = 0; // so next offset += dataLen won't decrement offset
-			  if (length > 0) {
-				break;
-			  } else {
-				finalOffset = correctOffset(offset);
-				return false;
-			  }
-			}
-			dataLen = ioBuffer.getLength();
-			bufferIndex = 0;
+```Java
+  @Override
+  public final boolean incrementToken() throws IOException {
+	clearAttributes();
+	if(useOldAPI) // TODO remove this in LUCENE 4.0
+	  return incrementTokenOld();
+	int length = 0;
+	int start = -1; // this variable is always initialized
+	char[] buffer = termAtt.buffer();
+	while (true) {
+	  if (bufferIndex >= dataLen) {
+		offset += dataLen;
+		if(!charUtils.fill(ioBuffer, input)) { // read supplementary char aware with CharacterUtils
+		  dataLen = 0; // so next offset += dataLen won't decrement offset
+		  if (length > 0) {
+			break;
+		  } else {
+			finalOffset = correctOffset(offset);
+			return false;
 		  }
-		  // use CharacterUtils here to support < 3.1 UTF-16 code unit behavior if the char based methods are gone
-		  final int c = charUtils.codePointAt(ioBuffer.getBuffer(), bufferIndex);
-		  bufferIndex += Character.charCount(c);
-
-		  if (isTokenChar(c)) {               // if it's a token char
-			if (length == 0) {                // start of token
-			  assert start == -1;
-			  start = offset + bufferIndex - 1;
-			} else if (length >= buffer.length-1) { // check if a supplementary could run out of bounds
-			  buffer = termAtt.resizeBuffer(2+length); // make sure a supplementary fits in the buffer
-			}
-			length += Character.toChars(normalize(c), buffer, length); // buffer it, normalized
-			if (length >= MAX_WORD_LEN) // buffer overflow! make sure to check for >= surrogate pair could break == test
-			  break;
-		  } else if (length > 0)             // at non-Letter w/ chars
-			break;                           // return 'em
 		}
-
-		termAtt.setLength(length);
-		assert start != -1;
-		offsetAtt.setOffset(correctOffset(start), finalOffset = correctOffset(start+length));
-		return true;
-		
+		dataLen = ioBuffer.getLength();
+		bufferIndex = 0;
 	  }
+	  // use CharacterUtils here to support < 3.1 UTF-16 code unit behavior if the char based methods are gone
+	  final int c = charUtils.codePointAt(ioBuffer.getBuffer(), bufferIndex);
+	  bufferIndex += Character.charCount(c);
+
+	  if (isTokenChar(c)) {               // if it's a token char
+		if (length == 0) {                // start of token
+		  assert start == -1;
+		  start = offset + bufferIndex - 1;
+		} else if (length >= buffer.length-1) { // check if a supplementary could run out of bounds
+		  buffer = termAtt.resizeBuffer(2+length); // make sure a supplementary fits in the buffer
+		}
+		length += Character.toChars(normalize(c), buffer, length); // buffer it, normalized
+		if (length >= MAX_WORD_LEN) // buffer overflow! make sure to check for >= surrogate pair could break == test
+		  break;
+	  } else if (length > 0)             // at non-Letter w/ chars
+		break;                           // return 'em
+	}
+
+	termAtt.setLength(length);
+	assert start != -1;
+	offsetAtt.setOffset(correctOffset(start), finalOffset = correctOffset(start+length));
+	return true;
+	
+  }
+```
 
