--- a/_posts/2015-02-03-Lucene分词器.md
+++ b/_posts/2015-02-03-Lucene分词器.md
@@ -42,8 +42,9 @@ Lucene分词器的工作方式可以用下图表示：
 
 ## CharTokenizer分析
 
-接下来，我们分析一下[CharTokenizer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/CharTokenizer.html)的源码。
+incrementToken()方法是分词器的核心。接下来，我们简要分析一下[CharTokenizer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/CharTokenizer.html)的这个方法的[源码](http://cc213.github.io/files/Lucene%E5%88%86%E8%AF%8D%E5%99%A8/CharTokenizer.java)：
 
+### 源码：
 ```Java
   @Override
   public final boolean incrementToken() throws IOException {
@@ -93,4 +94,30 @@ Lucene分词器的工作方式可以用下图表示：
 	
   }
 ```
+
+### 相关变量描述
+
+1. CharTokenizer成员变量
+
+input：Reader，从父类[Tokenizer](http://lucene.apache.org/core/3_5_0/api/all/org/apache/lucene/analysis/Tokenizer.html)继承，构造方法传入，待切分文本。
+
+ioBuffer：CharacterBuffer，char[]的封装，从input中拷贝字符，所有切分的计算都在这上面进行。
+
+termAtt：CharTermAttribute，存储切分的token的文本属性
+
+bufferIndex：int，ioBuffer下次开始读取的位置
+
+dataLen：int，ioBuffer中读入的字符数
+
+offset：int，Reader缓冲区下次开始读取的位置
+
+2. incrementToken()方法变量
+
+length：int，token的长度
+
+start：int，token在Reader缓冲区中的起始index
+
+buffer：char[]，引用，termAtt的termBuffer。
+
+### 方法流程描述
 
